--- a/..github/workflows/vps-deploy.yml
+++ b/..github/workflows/vps-deploy.yml
@@ -1,38 +1,34 @@
-name: Deploy FastAPI to VPS via SSH
+name: FastAPI CI/CD (No Docker)
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install SSH client
-      run: sudo apt-get install -y openssh-client
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-    - name: Setup SSH key
+    - name: Install dependencies
       run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.VPS_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-    - name: Copy code to VPS
+    - name: Run FastAPI app temporarily (for test only)
       run: |
-        rsync -avz --exclude='.git' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:/home/${{ secrets.VPS_USER }}/fastapi-app
+        uvicorn main:app --host 127.0.0.1 --port 8000 &
+        sleep 5
+        curl -f http://127.0.0.1:8000 || exit 1
 
-    - name: Install dependencies & restart app
-      run: |
-        ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
-          cd fastapi-app
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements.txt
-          nohup uvicorn main:app --host 0.0.0.0 --port 8000 > output.log 2>&1 &
-        EOF
+    - name: Done
+      run: echo "FastAPI app ran successfully!"
